styling, fixed commas and spacing for tags, added form (not yet functional)

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ header {
     flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
+    margin-bottom: 2rem;
 }
 
 #logo {
@@ -27,4 +28,76 @@ span {
     align-items: center;
     gap: 1rem;
     margin-right: 1rem;
+}
+
+main {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    gap:0.5rem;
+}
+
+#sidebar-l {
+    grid-column: 1 / 2;
+}
+
+#sidebar-r {
+    grid-column: 3 / 4;
+}
+
+#posts {
+    grid-column: 2 / 3;
+    gap: 0.5rem;
+}
+
+.post {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid lightgrey;
+    border-radius: 1rem;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+    font-family: "Rokkitt";
+}
+
+.post:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.post > span {
+    font-family: "Rokkitt";
+    font-size: 0.9rem;
+}
+
+.post > span::before {
+    content: "Tags: ";
+}
+
+details {
+    font-family: "Rokkitt";
+}
+
+.right > button {
+    width:50px;
+    height: 50px;
+    background-color: rgb(157, 64, 64);
+    border: none;
+    border-radius: 30%;
+    font-family: "Rokkitt";
+    color: white;
+}
+
+.right > button:hover {
+    background-color: pink;
+    border-radius: 10%;
+}
+
+#searchbar {
+    border-radius: 1.2rem;
+    padding: 0.5rem;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
 }
